@@ -424,11 +424,13 @@ void KWTextParag::save( QDomElement &parentElem, int from /* default 0 */,
     QDomElement layoutElem = doc.createElement( "LAYOUT" );
     paragElem.appendChild( layoutElem );
 
-    saveParagLayout( m_layout, layoutElem );
+    // save with the real alignment (left or right, not auto)
+    m_layout.saveParagLayout( layoutElem, resolveAlignment() );
 
     // Paragraph's format
     // ## Maybe we should have a "default format" somewhere and
     // pass it instead of 0L, to only save the non-default attributes
+    // But this would break all export filters again.
     QDomElement paragFormatElement = saveFormat( doc, paragraphFormat(), 0L, 0, to - from + 1 );
     layoutElem.appendChild( paragFormatElement );
 }
@@ -753,285 +755,9 @@ KoParagLayout KWTextParag::loadParagLayout( QDomElement & parentElem, KWDocument
         layout.style = style;
     }
 
-    // Load the paragraph tabs - forget about the ones from the style first.
-    // We can't apply the 'default comes from the style' in this case, because
-    // there is no way to differenciate between "I want no tabs in the parag"
-    // and "use default from style".
-    //m_tabList.clear();
-    KoTabulatorList tabList;
-    QDomElement element = parentElem.firstChild().toElement();
-    for ( ; !element.isNull() ; element = element.nextSibling().toElement() )
-    {
-        if ( element.tagName() == "TABULATOR" )
-        {
-            KoTabulator tab;
-            tab.type = static_cast<KoTabulators>( KWDocument::getAttribute( element, "type", T_LEFT ) );
-            tab.ptPos = KWDocument::getAttribute( element, "ptpos", 0.0 );
-            tab.filling = static_cast<KoTabulatorFilling>( KWDocument::getAttribute( element, "filling", TF_BLANK ) );
-            tab.ptWidth = KWDocument::getAttribute( element, "width", 0.5 );
-            tabList.append( tab );
-        }
-    }
-    qHeapSort( tabList );
-    layout.setTabList( tabList );
-    layout.alignment = Qt::AlignAuto;
-    element = parentElem.namedItem( "FLOW" ).toElement(); // Flow is what is now called alignment internally
-    if ( !element.isNull() )
-    {
-        QString flow = element.attribute( "align" ); // KWord-1.0 DTD
-        if ( !flow.isEmpty() )
-        {
-            // 'left' is the default and maps to Qt::AlignAuto
-            // We don't have support for forcing left-aligned RTL text, this would have
-            // to be called something else, e.g. forceLeft. This is the least damaging
-            // way. Saving AlignAuto as 'auto' would break the file format.
-            layout.alignment = flow=="right" ? (int)Qt::AlignRight : flow=="center" ? (int)Qt::AlignCenter : flow=="justify" ? (int)Qt::AlignJustify : (int)Qt::AlignAuto;
-        } else {
-            flow = element.attribute( "value" ); // KWord-0.8
-            static const int flow2align[] = { Qt::AlignAuto, Qt::AlignRight, Qt::AlignCenter, Qt::AlignJustify };
-            layout.alignment = flow2align[flow.toInt()];
-        }
-    }
+    KoParagLayout::loadParagLayout( layout, parentElem, doc->syntaxVersion() );
 
-    if ( doc->syntaxVersion() < 2 )
-    {
-        element = parentElem.namedItem( "OHEAD" ).toElement(); // used by KWord-0.8
-        if ( !element.isNull() )
-            layout.margins[QStyleSheetItem::MarginTop] = KWDocument::getAttribute( element, "pt", 0.0 );
-
-        element = parentElem.namedItem( "OFOOT" ).toElement(); // used by KWord-0.8
-        if ( !element.isNull() )
-            layout.margins[QStyleSheetItem::MarginBottom] = KWDocument::getAttribute( element, "pt", 0.0 );
-
-        element = parentElem.namedItem( "IFIRST" ).toElement(); // used by KWord-0.8
-        if ( !element.isNull() )
-            layout.margins[QStyleSheetItem::MarginFirstLine] = KWDocument::getAttribute( element, "pt", 0.0 );
-
-        element = parentElem.namedItem( "ILEFT" ).toElement(); // used by KWord-0.8
-        if ( !element.isNull() )
-            layout.margins[QStyleSheetItem::MarginLeft] = KWDocument::getAttribute( element, "pt", 0.0 );
-    }
-
-    // KWord-1.0 DTD
-    element = parentElem.namedItem( "INDENTS" ).toElement();
-    if ( !element.isNull() )
-    {
-        layout.margins[QStyleSheetItem::MarginFirstLine] = KWDocument::getAttribute( element, "first", 0.0 );
-        layout.margins[QStyleSheetItem::MarginLeft] = KWDocument::getAttribute( element, "left", 0.0 );
-        layout.margins[QStyleSheetItem::MarginRight] = KWDocument::getAttribute( element, "right", 0.0 );
-    }
-    element = parentElem.namedItem( "OFFSETS" ).toElement();
-    if ( !element.isNull() )
-    {
-        layout.margins[QStyleSheetItem::MarginTop] = KWDocument::getAttribute( element, "before", 0.0 );
-        layout.margins[QStyleSheetItem::MarginBottom] = KWDocument::getAttribute( element, "after", 0.0 );
-    }
-
-    if ( doc->syntaxVersion() < 2 )
-    {
-        element = parentElem.namedItem( "LINESPACE" ).toElement(); // used by KWord-0.8
-        if ( !element.isNull() )
-            layout.lineSpacing = KWDocument::getAttribute( element, "pt", 0.0 );
-    }
-
-    element = parentElem.namedItem( "LINESPACING" ).toElement(); // KWord-1.0 DTD
-    if ( !element.isNull() )
-    {
-        QString value = element.attribute( "value" );
-        if ( value == "oneandhalf" )
-            layout.lineSpacing = KoParagLayout::LS_ONEANDHALF;
-        else if ( value == "double" )
-            layout.lineSpacing = KoParagLayout::LS_DOUBLE;
-        else
-            layout.lineSpacing = value.toDouble();
-    }
-
-    int pageBreaking = 0;
-    element = parentElem.namedItem( "PAGEBREAKING" ).toElement();
-    if ( !element.isNull() )
-    {
-        if ( element.attribute( "linesTogether" ) == "true" )
-            pageBreaking |= KoParagLayout::KeepLinesTogether;
-        if ( element.attribute( "hardFrameBreak" ) == "true" )
-            pageBreaking |= KoParagLayout::HardFrameBreakBefore;
-        if ( element.attribute( "hardFrameBreakAfter" ) == "true" )
-            pageBreaking |= KoParagLayout::HardFrameBreakAfter;
-    }
-    if ( doc->syntaxVersion() < 2 )
-    {
-        element = parentElem.namedItem( "HARDBRK" ).toElement(); // KWord-0.8
-        if ( !element.isNull() )
-            pageBreaking |= KoParagLayout::HardFrameBreakBefore;
-    }
-    layout.pageBreaking = pageBreaking;
-
-    element = parentElem.namedItem( "LEFTBORDER" ).toElement();
-    if ( !element.isNull() )
-        layout.leftBorder = KoBorder::loadBorder( element );
-    else
-        layout.leftBorder.setPenWidth(0);
-
-    element = parentElem.namedItem( "RIGHTBORDER" ).toElement();
-    if ( !element.isNull() )
-        layout.rightBorder = KoBorder::loadBorder( element );
-    else
-        layout.rightBorder.setPenWidth(0);
-
-    element = parentElem.namedItem( "TOPBORDER" ).toElement();
-    if ( !element.isNull() )
-        layout.topBorder = KoBorder::loadBorder( element );
-    else
-        layout.topBorder.setPenWidth(0);
-
-    element = parentElem.namedItem( "BOTTOMBORDER" ).toElement();
-    if ( !element.isNull() )
-        layout.bottomBorder = KoBorder::loadBorder( element );
-    else
-        layout.bottomBorder.setPenWidth(0);
-
-    element = parentElem.namedItem( "COUNTER" ).toElement();
-    if ( !element.isNull() )
-    {
-        layout.counter = new KoParagCounter;
-        layout.counter->load( element );
-    }
-
-    element = parentElem.namedItem( "SHADOW" ).toElement();
-    if ( !element.isNull() )
-    {
-        layout.shadowDistance=element.attribute("distance").toInt();
-        layout.shadowDirection=element.attribute("direction").toInt();
-        if ( element.hasAttribute("red") )
-        {
-            int r = element.attribute("red").toInt();
-            int g = element.attribute("green").toInt();
-            int b = element.attribute("blue").toInt();
-            layout.shadowColor.setRgb( r, g, b );
-        }
-    }
     return layout;
-}
-
-void KWTextParag::saveParagLayout( const KoParagLayout& layout, QDomElement & parentElem )
-{
-    QDomDocument doc = parentElem.ownerDocument();
-    QDomElement element = doc.createElement( "NAME" );
-    parentElem.appendChild( element );
-    if ( layout.style )
-        element.setAttribute( "value", layout.style->name() );
-    else
-        kdWarning() << "KWTextParag::saveParagLayout: style==0L!" << endl;
-
-    element = doc.createElement( "FLOW" );
-    parentElem.appendChild( element );
-    int a = layout.alignment;
-    element.setAttribute( "align", a==Qt::AlignRight ? "right" : a==Qt::AlignCenter ? "center" : a==Qt::AlignJustify ? "justify" : "left" );
-
-    if ( layout.margins[QStyleSheetItem::MarginFirstLine] != 0 ||
-         layout.margins[QStyleSheetItem::MarginLeft] != 0 ||
-         layout.margins[QStyleSheetItem::MarginRight] != 0 )
-    {
-        element = doc.createElement( "INDENTS" );
-        parentElem.appendChild( element );
-        if ( layout.margins[QStyleSheetItem::MarginFirstLine] != 0 )
-            element.setAttribute( "first", layout.margins[QStyleSheetItem::MarginFirstLine] );
-        if ( layout.margins[QStyleSheetItem::MarginLeft] != 0 )
-            element.setAttribute( "left", layout.margins[QStyleSheetItem::MarginLeft] );
-        if ( layout.margins[QStyleSheetItem::MarginRight] != 0 )
-            element.setAttribute( "right", layout.margins[QStyleSheetItem::MarginRight] );
-    }
-
-    if ( layout.margins[QStyleSheetItem::MarginTop] != 0 ||
-         layout.margins[QStyleSheetItem::MarginBottom] != 0 )
-    {
-        element = doc.createElement( "OFFSETS" );
-        parentElem.appendChild( element );
-        if ( layout.margins[QStyleSheetItem::MarginTop] != 0 )
-            element.setAttribute( "before", layout.margins[QStyleSheetItem::MarginTop] );
-        if ( layout.margins[QStyleSheetItem::MarginBottom] != 0 )
-            element.setAttribute( "after", layout.margins[QStyleSheetItem::MarginBottom] );
-    }
-
-    if ( layout.lineSpacing != 0 )
-    {
-        element = doc.createElement( "LINESPACING" );
-        parentElem.appendChild( element );
-        if ( layout.lineSpacing == KoParagLayout::LS_ONEANDHALF )
-            element.setAttribute( "value", "oneandhalf" );
-        else if ( layout.lineSpacing == KoParagLayout::LS_DOUBLE )
-            element.setAttribute( "value", "double" );
-        else
-            element.setAttribute( "value", layout.lineSpacing );
-    }
-
-    if ( layout.pageBreaking != 0 )
-    {
-        element = doc.createElement( "PAGEBREAKING" );
-        parentElem.appendChild( element );
-        if ( layout.pageBreaking & KoParagLayout::KeepLinesTogether )
-            element.setAttribute( "linesTogether",  "true" );
-        if ( layout.pageBreaking & KoParagLayout::HardFrameBreakBefore )
-            element.setAttribute( "hardFrameBreak", "true" );
-        if ( layout.pageBreaking & KoParagLayout::HardFrameBreakAfter )
-            element.setAttribute( "hardFrameBreakAfter", "true" );
-    }
-
-    if ( layout.leftBorder.penWidth() > 0 )
-    {
-        element = doc.createElement( "LEFTBORDER" );
-        parentElem.appendChild( element );
-        layout.leftBorder.save( element );
-    }
-    if ( layout.rightBorder.penWidth() > 0 )
-    {
-        element = doc.createElement( "RIGHTBORDER" );
-        parentElem.appendChild( element );
-        layout.rightBorder.save( element );
-    }
-    if ( layout.topBorder.penWidth() > 0 )
-    {
-        element = doc.createElement( "TOPBORDER" );
-        parentElem.appendChild( element );
-        layout.topBorder.save( element );
-    }
-    if ( layout.bottomBorder.penWidth() > 0 )
-    {
-        element = doc.createElement( "BOTTOMBORDER" );
-        parentElem.appendChild( element );
-        layout.bottomBorder.save( element );
-    }
-    if ( layout.counter && layout.counter->numbering() != KoParagCounter::NUM_NONE )
-    {
-        element = doc.createElement( "COUNTER" );
-        parentElem.appendChild( element );
-        if ( layout.counter )
-            layout.counter->save( element );
-    }
-
-    KoTabulatorList tabList = layout.tabList();
-    KoTabulatorList::Iterator it = tabList.begin();
-    for ( ; it != tabList.end() ; it++ )
-    {
-        element = doc.createElement( "TABULATOR" );
-        parentElem.appendChild( element );
-        element.setAttribute( "type", (*it).type );
-        element.setAttribute( "ptpos", (*it).ptPos );
-        element.setAttribute( "filling", (*it).filling );
-        element.setAttribute( "width", (*it).ptWidth );
-    }
-    if(layout.shadowDistance!=0 || layout.shadowDirection!=KoParagLayout::SD_RIGHT_BOTTOM)
-    {
-        element = doc.createElement( "SHADOW" );
-        parentElem.appendChild( element );
-        element.setAttribute( "distance", layout.shadowDistance );
-        element.setAttribute( "direction", layout.shadowDirection );
-        if (layout.shadowColor.isValid())
-        {
-            element.setAttribute("red", layout.shadowColor.red());
-            element.setAttribute("green", layout.shadowColor.green());
-            element.setAttribute("blue", layout.shadowColor.blue());
-        }
-    }
 }
 
 void KWTextParag::join( KoTextParag *parag )
